# magmed_ws

./: .gitignore  DianaApiLog.txt  README.md
databag/: H160.bag  H170.bag  H180.bag  H190.bag  H200.bag  H210.bag  H220.bag  joint_vels.bag  joint_vels2.bag  joint_vels3.bag
devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/magmed_msgs/: CtrlTwist.h  GetRobotState.h  GetRobotStateRequest.h  GetRobotStateResponse.h  JointsVel.h  JoyRef.h  MagCR.h  MagPose.h  PFjoystick.h  PoseTwist.h  RefPhi.h  RefTheta.h  RoboJoints.h  RoboStates.h  SelfCollisionCheck.h  SelfCollisionCheckRequest.h  SelfCollisionCheckResponse.h  TipAngle.h
devel/lib/pkgconfig/: test.pc  (+19 more)
record/: joyCtrlFeed_2024-06-26-22-15-21.bag  joyCtrlFeed_2024-06-27-09-37-07.bag  joyCtrlFeed_2024-06-27-11-05-34.bag  joyCtrlFeed_2024-06-27-14-38-04.bag  joyCtrlFeed_2024-06-27-14-38-09.bag  joyCtrlFeed_2024-06-27-14-43-22.bag  joyCtrlFeed_2024-06-27-14-43-31.bag  joyCtrlFeed_2024-06-27-14-47-35.bag  joyCtrlFeed_2024-06-27-14-47-42.bag  joyCtrlFeed_2024-06-27-14-52-21.bag  joyCtrlFeed_2024-06-27-14-52-27.bag  joyCtrlFeed_2024-06-27-15-21-37.bag  joyCtrlFeed_2024-06-27-15-21-42.bag  joyCtrlFeed_2024-06-27-15-35-43.bag  joyCtrlFeed_2024-06-27-15-36-37.bag  joyCtrlFeed_2024-06-27-17-14-02.bag  joyCtrlFeed_2024-06-27-17-14-07.bag  joyCtrlFeed_tele_2024-06-27-08-22-26.bag  joyCtrlFeed_tele_2024-06-27-10-07-00.bag  joyCtrlFeed_tele_2024-06-27-16-12-22.bag  joyVelCtrl_2024-06-27-10-36-12.bag  joyVelCtrl_2024-06-27-10-38-38.bag  joyVelCtrl_2024-06-27-11-01-48.bag  joyVelCtrl_2024-06-27-18-30-31.bag  joyVelCtrl_2024-06-27-18-32-24.bag  joyVelCtrl_2024-06-27-18-33-44.bag  joyVelCtrl_2024-06-27-18-35-31.bag  joyVelCtrl_2024-06-27-18-38-56.bag  joyVelCtrl_2024-06-27-18-42-30.bag  joyVelCtrl_2024-06-27-18-45-34.bag  joyVelCtrl_2024-06-27-18-50-44.bag  joyVelCtrl_2024-06-27-18-52-01.bag  joyVelCtrl_2024-06-27-18-53-01.bag  joyVelCtrl_2024-06-27-18-53-29.bag  joyVelCtrl_2024-06-27-18-53-54.bag  joyVelCtrl_2024-06-27-19-00-01.bag  joyVelCtrl_2024-06-27-19-01-06.bag  joyVelCtrl_2024-06-27-19-04-34.bag  joyVelCtrl_2024-06-27-19-05-07.bag  joyVelCtrl_2024-06-27-19-06-32.bag  (+25 more)
src/RUN/: manuallyCtrl.sh
src/databag/: 2023-10-25-10-54-33.bag  2023-10-25-11-11-39.bag
src/diana7_description/: CMakeLists.txt
src/magmed_camera/: CMakeLists.txt  package.xml
src/magmed_controller/: CMakeLists.txt  package.xml
src/magmed_controller/config/: MSCR.yaml  MSCRproperties.yaml
src/magmed_controller/include/: diffKine.h  getJacobianOfMCR.h
src/magmed_controller/include/magmed_controller/: MSCRJacobi.h  diffKine.h  getJacobianOfMCR.h  joyCtrlFeed.hpp  optCtrl.h  velCtrlDef.h  velCtrlNode.h  velCtrlNode.hpp
src/magmed_controller/launch/: joyCtrlFeed.launch  joyCtrlFeed_teleOperat.launch  joyCtrlLinearActuator.launch  joystickVelCtrl.launch  optController.launch  velCtrlNode.launch  velocityController.launch
src/magmed_controller/path_following_control_ref/: pathfollow_points_BIT.txt  pathfollow_points_BIT_90.txt  pathfollow_points_square.txt
src/magmed_controller/src/: MSCRJacobi.cpp  controlAllocation.cpp  ctrlFlow.cpp  diffKine.cpp  getJacobianOfMCR.cpp  joyCtrlFeed.cpp  optController.cpp  optCtrl.cpp  velCtrlNode.cpp  velocityController.cpp  velocity_controller.cpp
src/magmed_deeplearning/: CMakeLists.txt  package.xml
src/magmed_description/: CMakeLists.txt
src/magmed_feeder/: CMakeLists.txt  package.xml
src/magmed_feeder/config/: feeder.yaml
src/magmed_feeder/include/: magrobo_feeder.hpp
src/magmed_feeder/src/: magrobo_feeder.cpp
src/magmed_joystick/: CMakeLists.txt  package.xml
src/magmed_maglocater/: CMakeLists.txt  package.xml
src/magmed_maglocator/: CMakeLists.txt  package.xml
src/magmed_manipulator/: CMakeLists.txt  README.md  package.xml
src/magmed_modules/: CMakeLists.txt  package.xml
src/magmed_msgs/: CMakeLists.txt
src/magmed_stereocamera/: CMakeLists.txt  README.md
src/magmed_virtualsurgery/: CMakeLists.txt  package.xml
src/magmed_visionfb/: CMakeLists.txt
src/test/: CMakeLists.txt
(+223 files in other folders)
